--- a/src/app/pages/feeds/profile/profile.page.html
+++ b/src/app/pages/feeds/profile/profile.page.html
@@ -15,7 +15,7 @@
     </ion-refresher-content>
   </ion-refresher>
 
-  <ion-grid class="container" [class.darkContainer]="theme.darkMode">
+  <ion-grid class="container" [class.darkContainer]="theme.darkMode" [class.blur]="menuService.optionsOn">
 
     <div class="profile-header">
       <ion-img *ngIf="avatar" [src]="'data:'+avatar.contentType+';base64,'+avatar.data"></ion-img>
@@ -54,4 +54,27 @@
     </ion-infinite-scroll>
 
   </ion-grid>
+
+  <ion-row class="global-options" [class.global-darkOptions]="theme.darkMode" *ngIf="menuService.optionsOn">
+    <div class="close ion-activatable ripple" (click)="menuService.hideOptions()">
+      <img *ngIf="!theme.darkMode" src="/assets/icons/cross.svg">
+      <img *ngIf="theme.darkMode" src="/assets/icons/darkmode/cross.svg">
+      <ion-ripple-effect></ion-ripple-effect>
+    </div>
+    <ion-col size="4.5" class="left-col" (click)="menuService.shareChannel()">
+      <div class="option">
+        <ion-icon mode="ios" name="share"></ion-icon>
+        <span>Share</span> 
+      </div>
+    </ion-col>
+    <ion-col size="3" class="middle-col">
+      <div class="divider"></div>
+    </ion-col>
+    <ion-col size="4.5" class="right-col" (click)="menuService.deleteChannel()">
+      <div class="option">
+        <ion-icon mode="ios" name="trash"></ion-icon>
+        <span>Unfollow</span>
+      </div>
+    </ion-col>
+  </ion-row>
 </ion-content>
