--- a/src/app/pages/feeds/comment/comment.page.scss
+++ b/src/app/pages/feeds/comment/comment.page.scss
@@ -1,3 +1,53 @@
+.channel-list {
+    padding: 10px 20px;
+
+    ion-item {
+        .channel-row {
+            .left-col {
+                justify-content: flex-start;
+            }
+        }
+    }
+
+    ion-textarea {
+        margin: 10px 0;
+        min-height: 192px;
+        border-radius: 9px;
+        background-color: #f0f1ff;
+        color: #161740;
+        --padding-start: 10px;
+        font-family: SourceSansPro;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 1.25;
+    }
+
+    .submit-row {
+        ion-col {
+            ion-button {
+                width: 100%;
+                height: 34px;
+                --border-radius: 30px;
+                --box-shadow: none;
+            
+                ion-label {
+                  font-size: 13px !important;
+                  font-weight: 700;
+                  padding: 0;
+                  overflow: hidden;
+                }
+            }
+        }
+    }
+}
+
+.darkChannelList {
+    ion-textarea {
+        background-color: #2e2f4e;
+        color: #ffffff;
+    }
+}
+
 .rightContent{
     position:absolute;
     left:100px;
