--- a/src/app/pages/feeds/home/home.page.html
+++ b/src/app/pages/feeds/home/home.page.html
@@ -61,7 +61,7 @@
               <ion-label class="channel-post white"><pre>{{getContentText(post.content)}}</pre></ion-label>
             </div>
             
-            <ion-avatar  *ngIf="images[post.nodeId+post.channel_id+post.id] != 'none'" class="content-img-without-margin" (click)="navToPostDetail(post.nodeId, post.channel_id, post.id)">
+            <ion-avatar  *ngIf="images[post.nodeId+post.channel_id+post.id] != 'none'" class="content-img-without-margin" (click)="!menuService.optionsOn ? navToPostDetail(post.nodeId, post.channel_id, post.id) : menuService.hideOptions()">
               <img [src]="images[post.nodeId+post.channel_id+post.id]" style="margin-top: 2px;"> 
             </ion-avatar>
     
