--- a/src/app/pages/feeds/home/channels/channels.page.html
+++ b/src/app/pages/feeds/home/channels/channels.page.html
@@ -14,91 +14,94 @@
       refreshingText="{{'common.Refreshing'|translate}}"
     >
     </ion-refresher-content>
+  </ion-refresher>
+
   <div *ngIf="checkChannelIsMine() == 0" class="edit" (click)="clickEdit()">
     <ion-img src="./assets/images/edit.svg" *ngIf="!theme.darkMode"></ion-img>
     <ion-img src="./assets/images/edit-dark.svg" *ngIf="theme.darkMode"></ion-img>
   </div> 
-    <div class="channel-img-div">
-      <ion-avatar class="channel-img" style="width:80px ; height: 80px;position: relative;">
-        <div class="feed-source-card-status chancecirclePosition">
-          <div class="online-circle"  *ngIf="nodeStatus[nodeId] == 0"></div>
-          <div class="offline-circle" *ngIf="nodeStatus[nodeId] == 1"></div>
-        </div>
-        <img  src={{channelAvatar}}>
-      </ion-avatar>
-    </div>
 
-    <div class="channel-title-div">
-      <ion-label class="channel-title white">{{channelName}}</ion-label>
-    </div>
-
-    <div class="center-flex" style="margin-top: 10px;">
-      <img class="profile-sub-img" src="./assets/images/bubble2.svg">
-      <ion-label class="profile-sub-text">{{channelSubscribes}} </ion-label>
-      <ion-label  class="profile-subscribe">{{'common.followers'|translate}}</ion-label>
-    </div>
-
-    <div class="channel-desc-div">
-      <ion-label class="channel-desc white">{{channelDesc}}</ion-label>
-    </div>
-
-    <div class="center-flex btn-container" style="margin-top: 10px;">
-
-      <ion-button *ngIf="followStatus" style="width: 76.8px;
-      height: 25.6px; --border-radius:25px; 
-      --background: #368bff;" (click)="unsubscribe()">
-        <ion-label style="  font-family: Montserrat;
-        font-size: 10px;
-        font-weight: bold;
-        font-stretch: normal;
-        font-style: normal;
-        line-height: 1.3;
-        letter-spacing: normal;
-        text-align: left;
-        color: #fdfeff;">{{'ChannelsPage.following'|translate}}</ion-label>
-      </ion-button>
-
-      <ion-button *ngIf="!followStatus" style="width: 76.8px;
-      height: 25.6px; --border-radius:25px; 
-      --border-color:#8888b0
-      " fill="outline" (click)="subscribe()">
-        <ion-label style="  font-family: Montserrat;
-        font-size: 10px;
-        font-weight: bold;
-        font-stretch: normal;
-        font-style: normal;
-        line-height: 1.3;
-        letter-spacing: normal;
-        text-align: left;
-        color: #8888b0;">{{'ChannelsPage.follow'|translate}}</ion-label>
-      </ion-button>
-
-
-      <ion-button style="  
-      margin-left: 25.5px;
-      width: 76.8px;
-      height: 25.6px;
-      --border-radius:25px; 
-      --background: #a067ff;
-      "   (click)="tip()">
-        <ion-label style="  font-family: Montserrat;
-        font-size: 10px;
-        font-weight: bold;
-        font-stretch: normal;
-        font-style: normal;
-        line-height: 1.3;
-        letter-spacing: normal;
-        text-align: left;
-        color: #fdfeff;">{{'ChannelsPage.tip'|translate}}</ion-label>
-      </ion-button>
-    </div>
-
-    <div *ngIf="postList.length===0" style="margin-top: 80px;">
-      <div style="text-align: center;">
-        <img src="./assets/images/empty-feeds-icon.svg">
+  <div class="channel-img-div">
+    <ion-avatar class="channel-img" style="width:80px ; height: 80px;position: relative;">
+      <div class="feed-source-card-status chancecirclePosition">
+        <div class="online-circle"  *ngIf="nodeStatus[nodeId] == 0"></div>
+        <div class="offline-circle" *ngIf="nodeStatus[nodeId] == 1"></div>
       </div>
-      <div class="all-empty" style="margin-top: 10px;">{{ 'common.nopostyet' | translate }}</div>
+      <img  src={{channelAvatar}}>
+    </ion-avatar>
+  </div>
+
+  <div class="channel-title-div">
+    <ion-label class="channel-title white">{{channelName}}</ion-label>
+  </div>
+
+  <div class="center-flex" style="margin-top: 10px;">
+    <img class="profile-sub-img" src="./assets/images/bubble2.svg">
+    <ion-label class="profile-sub-text">{{channelSubscribes}} </ion-label>
+    <ion-label  class="profile-subscribe">{{'common.followers'|translate}}</ion-label>
+  </div>
+
+  <div class="channel-desc-div">
+    <ion-label class="channel-desc white">{{channelDesc}}</ion-label>
+  </div>
+
+  <div class="center-flex btn-container" style="margin-top: 10px;">
+
+    <ion-button *ngIf="followStatus" style="width: 76.8px;
+    height: 25.6px; --border-radius:25px; 
+    --background: #368bff;" (click)="unsubscribe()">
+      <ion-label style="  font-family: Montserrat;
+      font-size: 10px;
+      font-weight: bold;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.3;
+      letter-spacing: normal;
+      text-align: left;
+      color: #fdfeff;">{{'ChannelsPage.following'|translate}}</ion-label>
+    </ion-button>
+
+    <ion-button *ngIf="!followStatus" style="width: 76.8px;
+    height: 25.6px; --border-radius:25px; 
+    --border-color:#8888b0
+    " fill="outline" (click)="subscribe()">
+      <ion-label style="  font-family: Montserrat;
+      font-size: 10px;
+      font-weight: bold;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.3;
+      letter-spacing: normal;
+      text-align: left;
+      color: #8888b0;">{{'ChannelsPage.follow'|translate}}</ion-label>
+    </ion-button>
+
+
+    <ion-button style="  
+    margin-left: 25.5px;
+    width: 76.8px;
+    height: 25.6px;
+    --border-radius:25px; 
+    --background: #a067ff;
+    "   (click)="tip()">
+      <ion-label style="  font-family: Montserrat;
+      font-size: 10px;
+      font-weight: bold;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.3;
+      letter-spacing: normal;
+      text-align: left;
+      color: #fdfeff;">{{'ChannelsPage.tip'|translate}}</ion-label>
+    </ion-button>
+  </div>
+
+  <div *ngIf="postList.length===0" style="margin-top: 80px;">
+    <div style="text-align: center;">
+      <img src="./assets/images/empty-feeds-icon.svg">
     </div>
+    <div class="all-empty" style="margin-top: 10px;">{{ 'common.nopostyet' | translate }}</div>
+  </div>
 
     <div *ngFor="let post of postList let i=index" style="margin-top: 25px;">
       <div class="image-text-layout-div" >
@@ -149,6 +152,7 @@
       <div class="line-div white-line" *ngIf="i!=postList.length-1"></div>
     </div>
 
+
     <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
       <ion-infinite-scroll-content
         loadingSpinner="bubbles"
@@ -156,4 +160,4 @@
       </ion-infinite-scroll-content>
     </ion-infinite-scroll>
 
-</ion-content>
+  </ion-content>
