--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -419,8 +419,8 @@ $segment-button-md-text-color: #007AFF !important;
             border-radius: 50%;
             object-fit: cover;
             overflow: hidden;
-            max-height: 55px;
-            max-width: 55px;
+            height: 55px;
+            width: 55px;
           }
 
           .offline {
