Rewrite feed posts UI, add missing fontfamily

--- a/src/app/components/following/following.component.html
+++ b/src/app/components/following/following.component.html
@@ -24,7 +24,7 @@
         class="left-col"
         (click)="navTo(channel.nodeId, channel.id)"
       >
-        <div class="avatar-container">
+        <div class="feedAvatar" [class.dark-feedAvatar]="theme.darkMode">
           <img src={{parseAvatar(channel.avatar)}}>
           <div class="offline" [class.online]="nodeStatus[channel.nodeId] === 0"></div>
         </div>
