--- a/src/app/components/likes/likes.component.scss
+++ b/src/app/components/likes/likes.component.scss
@@ -2,6 +2,10 @@
     margin-top: 50px;
 }
 
+.removeBorder {
+    border-bottom: none;
+}
+
 .darkContainer{
     .channel-title-div .white{
             color: #ffffff;
