--- a/src/app/components/likes/likes.component.html
+++ b/src/app/components/likes/likes.component.html
@@ -11,7 +11,53 @@
   </ion-row>
 </div>
 
-<div *ngFor="let post of likeList let i=index" [class.darkContainer]="theme.darkMode">
+<div *ngIf="likeList.length > 0" [class.blur]="menuService.optionsOn">
+  <ion-grid *ngFor="let post of likeList let i=index" class="post-grid ion-activatable ripple" [class.darkPostGrid]="theme.darkMode" [class.removeBorder]="post === likeList[likeList.length - 1]">
+    <ion-row class="post-row">
+      <ion-col class="img-col" size="2.5" (click)="navTo(post.nodeId, post.channel_id)">
+        <div class="feedAvatar" [class.dark-feedAvatar]="theme.darkMode">
+          <img src={{parseAvatar(post.nodeId,post.channel_id)}}>
+          <div class="offline" [class.online]="nodeStatus[post.nodeId] == 0"></div>
+        </div>
+      </ion-col>
+      <ion-col class="content-col" size="9.5">
+        <ion-row class="top-row">
+          <ion-col class="left-col" size="11" (press)="pressName(post.nodeId, post.channel_id)">
+            <ion-label>
+              {{ channelName(post.nodeId, post.channel_id) }}
+              <span>- {{ handleDisplayTime(post.created_at) }}</span>
+            </ion-label>
+          </ion-col>
+          <img 
+            [src]="!theme.darkMode ? './assets/images/dots-three-vertical.svg' : './assets/images/dots-three-vertical-dark.svg'"
+            (click)="menuService.showOptions(post.nodeId, post.channel_id)"
+          >
+        </ion-row>
+        <p>@{{ channelOwnerName(post.nodeId, post.channel_id) }}</p>
+        <h2 (click)="!menuService.optionsOn ? navToPostDetail(post.nodeId, post.channel_id, post.id) : menuService.hideOptions()">{{ getContentText(post.content) }}</h2>
+        <img 
+          *ngIf="getImage(post.nodeId, post.channel_id, post.id)"
+          src="{{getImage(post.nodeId, post.channel_id, post.id)}}"
+          class="post-img"
+          (click)="!menuService.optionsOn ? navToPostDetail(post.nodeId, post.channel_id, post.id) : menuService.hideOptions()"
+        > 
+        <ion-row class="bottom-row">
+          <ion-col size="2.25">
+            <img [src]="checkMyLike(post.nodeId, post.channel_id, post.id) ? '/assets/images/like-s.svg' : '/assets/images/like.svg'" (click)="like(post.nodeId, post.channel_id, post.id)">
+            <ion-label [class.liked]="checkMyLike(post.nodeId, post.channel_id, post.id)" (click)="like(post.nodeId, post.channel_id, post.id)">{{ post.likes }}</ion-label>
+          </ion-col>
+          <ion-col>
+            <img [src]="post.comments ? '/assets/images/comment-s.svg' : '/assets/images/bubble-line.svg'" (click)="showCommentPage(post.nodeId, post.channel_id, post.id)">
+            <ion-label [class.commented]="post.comments" (click)="showCommentPage(post.nodeId, post.channel_id, post.id)">{{post.comments}}</ion-label>
+          </ion-col>
+        </ion-row>
+      </ion-col>
+    </ion-row>
+    <ion-ripple-effect></ion-ripple-effect>
+  </ion-grid>
+</div>
+
+<!-- <div *ngFor="let post of likeList let i=index" [class.darkContainer]="theme.darkMode">
   <div class="image-text-layout-div" >
     <ion-card-content class="ion-no-padding ion-no-margin">
       <div class="menu-div" (click)="menuMore(post.nodeId, post.channel_id)">
@@ -58,3 +104,4 @@
   </div>
   <div class="line-div white-line" *ngIf="i!=likeList.length-1"></div>
 </div>
+ -->
