--- a/src/app/pages/feeds/home/channels/channels.page.html
+++ b/src/app/pages/feeds/home/channels/channels.page.html
@@ -103,7 +103,77 @@
     <div class="all-empty" style="margin-top: 10px;">{{ 'common.nopostyet' | translate }}</div>
   </div>
 
-    <div *ngFor="let post of postList let i=index" style="margin-top: 25px;">
+  <div *ngIf="postList.length > 0" [class.blur]="menuService.optionsOn">
+    <ion-grid *ngFor="let post of postList let i=index" class="post-grid ion-activatable ripple" [class.darkPostGrid]="theme.darkMode">
+      <ion-row class="post-row">
+        <ion-col class="img-col" size="2.5">
+          <div class="feedAvatar" [class.dark-feedAvatar]="theme.darkMode">
+            <img src={{channelAvatar}}>
+            <div class="offline" [class.online]="nodeStatus[post.nodeId] == 0"></div>
+          </div>
+        </ion-col>
+        <ion-col class="content-col" size="9.5">
+          <ion-row class="top-row">
+            <ion-col class="left-col" size="11" (press)="pressName(post.nodeId, post.channel_id)">
+              <ion-label>
+                {{ getChannel(post.nodeId, post.channel_id) }}
+                <span>- {{ handleDisplayTime(post.created_at) }}</span>
+              </ion-label>
+            </ion-col>
+            <img 
+              [src]="!theme.darkMode ? './assets/images/dots-three-vertical.svg' : './assets/images/dots-three-vertical-dark.svg'"
+              (click)="menuService.showOptions(post.nodeId, post.channel_id)"
+            >
+          </ion-row>
+          <p>@{{ getChannelOwnerName(post.nodeId, post.channel_id) }}</p>
+          <h2 (click)="!menuService.optionsOn ? navToPostDetail(post.nodeId, post.channel_id, post.id) : menuService.hideOptions()">{{ getContentText(post.content) }}</h2>
+          <img 
+            *ngIf="getImage(post.nodeId, post.channel_id, post.id)"
+            src="{{getImage(post.nodeId, post.channel_id, post.id)}}"
+            class="post-img"
+            (click)="!menuService.optionsOn ? navToPostDetail(post.nodeId, post.channel_id, post.id) : menuService.hideOptions()"
+          > 
+          <ion-row class="bottom-row">
+            <ion-col size="2.25">
+              <img [src]="checkMyLike(post.nodeId, post.channel_id, post.id) ? '/assets/images/like-s.svg' : '/assets/images/like.svg'" (click)="like(post.nodeId, post.channel_id, post.id)">
+              <ion-label [class.liked]="checkMyLike(post.nodeId, post.channel_id, post.id)" (click)="like(post.nodeId, post.channel_id, post.id)">{{ post.likes }}</ion-label>
+            </ion-col>
+            <ion-col>
+              <img [src]="post.comments ? '/assets/images/comment-s.svg' : '/assets/images/bubble-line.svg'" (click)="showCommentPage(post.nodeId, post.channel_id, post.id)">
+              <ion-label [class.commented]="post.comments" (click)="showCommentPage(post.nodeId, post.channel_id, post.id)">{{ post.comments }}</ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-col>
+      </ion-row>
+      <ion-ripple-effect></ion-ripple-effect>
+    </ion-grid>
+  </div>
+
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll-content
+      loadingSpinner="bubbles"
+      loadingText="{{'common.loadingText'|translate}}">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
+
+  <!-- OPTIONS POPUP -->
+  <ion-row class="global-options" [class.global-darkOptions]="theme.darkMode" *ngIf="menuService.optionsOn">
+    <div class="close ion-activatable ripple" (click)="menuService.hideOptions()">
+      <img *ngIf="!theme.darkMode" src="/assets/icons/cross.svg">
+      <img *ngIf="theme.darkMode" src="/assets/icons/darkmode/cross.svg">
+      <ion-ripple-effect></ion-ripple-effect>
+    </div>
+    <ion-col size="12" (click)="menuService.shareChannel()">
+      <div class="option">
+        <ion-icon mode="ios" name="share"></ion-icon>
+        <span>Share</span> 
+      </div>
+    </ion-col>
+  </ion-row>
+
+</ion-content>
+
+<!--  <div *ngFor="let post of postList let i=index" style="margin-top: 25px;">
       <div class="image-text-layout-div" >
         <ion-card-content class="ion-no-padding ion-no-margin">
           <div class="menu-div"  (click)="menuMore()">
@@ -150,14 +220,4 @@
         </ion-card-content>
       </div>
       <div class="line-div white-line" *ngIf="i!=postList.length-1"></div>
-    </div>
-
-
-    <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
-      <ion-infinite-scroll-content
-        loadingSpinner="bubbles"
-        loadingText="{{'common.loadingText'|translate}}">
-      </ion-infinite-scroll-content>
-    </ion-infinite-scroll>
-
-  </ion-content>
+    </div> -->
