--- a/src/app/pages/feeds/home/home.page.html
+++ b/src/app/pages/feeds/home/home.page.html
@@ -2,8 +2,20 @@
   <div class="offline-header"></div>
 </ion-header>
 
-<ion-content ion-padding>
+<ion-content>
 
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" pullFactor="0.5">
+    <ion-refresher-content
+      class="refresh"
+      pullingText="{{'common.pullToRefresh'|translate}}"
+      pullingIcon="arrow-dropdown"
+      refreshingSpinner="crescent"
+      refreshingText="{{'common.Refreshing'|translate}}"
+    >
+    </ion-refresher-content>
+  </ion-refresher>
+
+  <!-- NO POSTS -->
   <div *ngIf="postList.length === 0" class="empty-container">
     <img src="./assets/images/empty-feeds-icon.svg">
     <h1>{{ 'HomePage.allempty' | translate }}</h1>
@@ -17,18 +29,88 @@
     </ion-row>
   </div>
 
-  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" pullFactor="0.5">
-    <ion-refresher-content
-      class="refresh"
-      pullingText="{{'common.pullToRefresh'|translate}}"
-      pullingIcon="arrow-dropdown"
-      refreshingSpinner="crescent"
-      refreshingText="{{'common.Refreshing'|translate}}"
-    >
-    </ion-refresher-content>
-  </ion-refresher>
+  <!-- HAS POSTS  -->
+  <div *ngIf="postList.length > 0" [class.blur]="menuService.optionsOn">
+    <ion-grid *ngFor="let post of postList let i=index" class="post-grid ion-activatable ripple" [class.darkPostGrid]="theme.darkMode">
+      <ion-row class="post-row">
+        <ion-col class="img-col" size="2.5" (click)="navTo(post.nodeId, post.channel_id)">
+          <div class="feedAvatar" [class.dark-feedAvatar]="theme.darkMode">
+            <img src={{parseAvatar(post.nodeId,post.channel_id)}}>
+            <div class="offline" [class.online]="nodeStatus[post.nodeId] == 0"></div>
+          </div>
+        </ion-col>
+        <ion-col class="content-col" size="9.5">
+          <ion-row class="top-row">
+            <ion-col class="left-col" size="11" (press)="pressName(post.nodeId, post.channel_id)">
+              <ion-label>
+                {{ getChannelName(post.nodeId, post.channel_id) }}
+                <span>- {{ handleDisplayTime(post.created_at) }}</span>
+              </ion-label>
+            </ion-col>
+            <img 
+              [src]="!theme.darkMode ? './assets/images/dots-three-vertical.svg' : './assets/images/dots-three-vertical-dark.svg'"
+              (click)="menuService.showOptions(post.nodeId, post.channel_id)"
+            >
+          </ion-row>
+          <p>@{{ getChannelOwnerName(post.nodeId, post.channel_id) }}</p>
+          <h2 (click)="!menuService.optionsOn ? navToPostDetail(post.nodeId, post.channel_id, post.id) : menuService.hideOptions()">{{ getContentText(post.content) }}</h2>
+          <img 
+            *ngIf="images[post.nodeId+post.channel_id+post.id]"
+            [src]="images[post.nodeId+post.channel_id+post.id]" 
+            class="post-img"
+            (click)="!menuService.optionsOn ? navToPostDetail(post.nodeId, post.channel_id, post.id) : menuService.hideOptions()"
+          > 
+          <ion-row class="bottom-row">
+            <ion-col size="2.25">
+              <img [src]="checkMyLike(post.nodeId, post.channel_id, post.id) ? '/assets/images/like-s.svg' : '/assets/images/like.svg'" (click)="like(post.nodeId, post.channel_id, post.id)">
+              <ion-label [class.liked]="checkMyLike(post.nodeId, post.channel_id, post.id)" (click)="like(post.nodeId, post.channel_id, post.id)">{{ post.likes }}</ion-label>
+            </ion-col>
+            <ion-col>
+              <img [src]="post.comments ? '/assets/images/comment-s.svg' : '/assets/images/bubble-line.svg'" (click)="showCommentPage(post.nodeId, post.channel_id, post.id)">
+              <ion-label [class.commented]="post.comments" (click)="showCommentPage(post.nodeId, post.channel_id, post.id)">{{post.comments}}</ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-col>
+      </ion-row>
+      <ion-ripple-effect></ion-ripple-effect>
+    </ion-grid>
+  </div>
+ 
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll-content
+      loadingSpinner="bubbles"
+      loadingText="{{'common.loadingText'|translate}}">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 
-    <div *ngFor="let post of postList let i=index" [class.darkContainer]="theme.darkMode" [class.blur]="menuService.optionsOn" class="scroll-container" id="my-scroll-container">
+  <!-- OPTIONS POPUP -->
+  <ion-row class="global-options" [class.global-darkOptions]="theme.darkMode" *ngIf="menuService.optionsOn">
+    <div class="close ion-activatable ripple" (click)="menuService.hideOptions()">
+      <img *ngIf="!theme.darkMode" src="/assets/icons/cross.svg">
+      <img *ngIf="theme.darkMode" src="/assets/icons/darkmode/cross.svg">
+      <ion-ripple-effect></ion-ripple-effect>
+    </div>
+    <ion-col size="4.5" class="left-col" (click)="menuService.shareChannel()">
+      <div class="option">
+        <ion-icon mode="ios" name="share"></ion-icon>
+        <span>Share</span> 
+      </div>
+    </ion-col>
+    <ion-col size="3" class="middle-col">
+      <div class="divider"></div>
+    </ion-col>
+    <ion-col size="4.5" class="right-col" (click)="menuService.deleteChannel()">
+      <div class="option">
+        <ion-icon mode="ios" name="trash"></ion-icon>
+        <span>Unfollow</span>
+      </div>
+    </ion-col>
+  </ion-row>
+
+</ion-content>
+
+<!-- 
+   <div *ngFor="let post of postList let i=index" [class.darkContainer]="theme.darkMode" [class.blur]="menuService.optionsOn" class="scroll-container" id="my-scroll-container">
 
       <div class="image-text-layout-div" >
         <ion-card-content class="ion-no-padding ion-no-margin">
@@ -78,109 +160,4 @@
       </div>
       <div class="line-div white-line" *ngIf="i!=postList.length-1"></div>
     </div>
-
-    <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
-      <ion-infinite-scroll-content
-        loadingSpinner="bubbles"
-        loadingText="{{'common.loadingText'|translate}}">
-      </ion-infinite-scroll-content>
-    </ion-infinite-scroll>
-
-  <ion-row class="global-options" [class.global-darkOptions]="theme.darkMode" *ngIf="menuService.optionsOn">
-    <div class="close ion-activatable ripple" (click)="menuService.hideOptions()">
-      <img *ngIf="!theme.darkMode" src="/assets/icons/cross.svg">
-      <img *ngIf="theme.darkMode" src="/assets/icons/darkmode/cross.svg">
-      <ion-ripple-effect></ion-ripple-effect>
-    </div>
-    <ion-col size="4.5" class="left-col" (click)="menuService.shareChannel()">
-      <div class="option">
-        <ion-icon mode="ios" name="share"></ion-icon>
-        <span>Share</span> 
-      </div>
-    </ion-col>
-    <ion-col size="3" class="middle-col">
-      <div class="divider"></div>
-    </ion-col>
-    <ion-col size="4.5" class="right-col" (click)="menuService.deleteChannel()">
-      <div class="option">
-        <ion-icon mode="ios" name="trash"></ion-icon>
-        <span>Unfollow</span>
-      </div>
-    </ion-col>
-  </ion-row>
-
-</ion-content>
-
-<!-- TEST UI WITH DUMMY DATA
-  ion-header *ngIf="connectionStatus == 1">
-    <div class="offline-header"></div>
-  </ion-header>
-  
-  <ion-content ion-padding>
-  
-    <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" pullFactor="0.5">
-      <ion-refresher-content
-        class="refresh"
-        pullingText="{{'common.pullToRefresh'|translate}}"
-        pullingIcon="arrow-dropdown"
-        refreshingSpinner="crescent"
-        refreshingText="{{'common.Refreshing'|translate}}"
-      >
-      </ion-refresher-content>
-    </ion-refresher>
-  
-      <div [class.darkContainer]="theme.darkMode" class="scroll-container" id="my-scroll-container">
-  
-        <div class="image-text-layout-div" >
-          <ion-card-content class="ion-no-padding ion-no-margin">
-            <div class="menu-div">
-              <img *ngIf="theme.darkMode" src="assets/images/dots-three-vertical-dark.svg">
-              <img *ngIf="!theme.darkMode" src="assets/images/dots-three-vertical.svg">
-            </div>
-            <div class="image-text-div">
-                <ion-avatar class="avatar-div">
-                  <div class="feed-source-card-status circlePosition">
-                    <div class="offline-circle"></div>
-                  </div>
-                  <img src="./assets/images/empty-feeds-icon.svg">
-                </ion-avatar>
-      
-                <div class="text-div">
-                  <div class="text1-div"> 
-                    <ion-label class="channel-title-small white">Feeds Name</ion-label>
-                    <ion-label class="channel-ts">- 5h</ion-label>
-                  </div>
-                  <ion-label class="channel-desc-small">@FeedsName</ion-label>
-                </div>
-            </div>
-      
-            <div style="margin-left: 81px;margin-top:-12px">
-              <div class="channel-post-div"> 
-                <ion-label class="channel-post white"><pre>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias architecto sunt nisi non harum rerum sed dignissimos quas sapiente fugit blanditiis quibusdam vel excepturi itaque, sint magni possimus id molestiae autem fuga alias mollitia dolorem similique velit. Nesciunt, ipsam corrupti.</pre></ion-label>
-              </div>
-              
-              <ion-avatar class="content-img-without-margin">
-                <img src="./assets/images/empty-feeds-icon.svg">
-              </ion-avatar>
-      
-              
-              <div class="channel-post-heart-comment-div">
-                <img class="like" [ngClass]="{'like-s': checkMyLike(post.nodeId, post.channel_id, post.id)}">
-                <ion-label class="like-text" [ngClass]="{'like-s-text': checkMyLike(post.nodeId, post.channel_id, post.id)}">5</ion-label>
-      
-                <img src="./assets/images/bubble-line.svg" class="comment">
-                <ion-label class="comment-text">10</ion-label>
-              </div>
-            </div>
-          </ion-card-content>
-        </div>
-        <div class="line-div white-line"></div>
-      </div>
-  
-      <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
-        <ion-infinite-scroll-content
-          loadingSpinner="bubbles"
-          loadingText="{{'common.loadingText'|translate}}">
-        </ion-infinite-scroll-content>
-      </ion-infinite-scroll>
-  </ion-content> -->
+ -->
