--- a/src/app/pages/feeds/home/postdetail/postdetail.page.html
+++ b/src/app/pages/feeds/home/postdetail/postdetail.page.html
@@ -1,8 +1,9 @@
 <ion-header *ngIf="connectionStatus == 1">
   <div class="offline-header"></div>
 </ion-header>
+
 <ion-content [class.darkContainer]="theme.darkMode">
-  <!--on-refresher-->
+
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" pullFactor="0.5">
     <ion-refresher-content
       class="refresh"
@@ -14,7 +15,117 @@
     </ion-refresher-content>
   </ion-refresher>
 
-    <div class="image-text-layout-div" >
+  <div class="container">
+    <ion-grid class="post-grid" [class.darkPostGrid]="theme.darkMode" [class.blur]="menuService.optionsOn">
+      <ion-row class="post-row">
+        <ion-col class="img-col" size="2.5">
+          <div class="feedAvatar" [class.dark-feedAvatar]="theme.darkMode">
+            <img src={{channelAvatar}}>
+            <div class="offline" [class.online]="nodeStatus[nodeId] === 0"></div>
+          </div>
+        </ion-col>
+        <ion-col class="content-col" size="9.5">
+          <ion-row class="top-row">
+            <ion-col class="left-col" size="11" (press)="pressName()">
+              <ion-label>
+                {{ channelName }}
+                <span>- {{ handleDisplayTime(postTS) }}</span>
+              </ion-label>
+            </ion-col>
+            <img 
+              [src]="!theme.darkMode ? './assets/images/dots-three-vertical.svg' : './assets/images/dots-three-vertical-dark.svg'"
+              (click)="menuMore()"
+            >
+          </ion-row>
+          <p>@{{ channelOwner }}</p>
+          <h2 (click)="!menuService.optionsOn ? null : menuService.hideOptions()">{{ getContentText(postContent) }}</h2>
+          <img 
+            *ngIf="getImage()"
+            [src]="getImage()"
+            class="post-img"
+            (click)="!menuService.optionsOn ? null : menuService.hideOptions()"
+          > 
+          <ion-row class="bottom-row">
+            <ion-col size="2.25">
+              <img [src]="checkMyLike() ? '/assets/images/like-s.svg' : '/assets/images/like.svg'" (click)="like()">
+              <ion-label [class.liked]="checkMyLike()" (click)="like()">{{ likesNum }}</ion-label>
+            </ion-col>
+            <ion-col>
+              <img [src]="commentsNum ? '/assets/images/comment-s.svg' : '/assets/images/bubble-line.svg'" (click)="showCommentPage(nodeId,channelId,postId)">
+              <ion-label [class.commented]="commentsNum" (click)="showCommentPage(nodeId,channelId,postId)">{{ commentsNum }}</ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <div *ngFor="let comment of commentList let i=index">
+      <div class="channel-img-small-div">
+        <ion-avatar class="avatar-div" style="margin-top: 5px;">
+          <img *ngIf="avatar == ''" class="profile-img" src="./assets/images/default-contact.svg">
+          <img *ngIf="avatar != ''" class="profile-img" [src]="avatar">
+        </ion-avatar> 
+        <div class="channel-detail-div">
+          <div class="channel-detail-text-div">
+            <div style="height: 100%; vertical-align: middle;" > 
+              <ion-label class="channel-title-small white">@{{indexText(comment.user_name)}}</ion-label>
+              <ion-label class="channel-ts">- {{handleDisplayTime(comment.created_at)}}</ion-label>
+              <ion-icon name="more" mode="ios" style="vertical-align: middle; float: right; "></ion-icon>
+            </div>
+  
+            <div> 
+              <ion-label class="channel-desc-small">@{{indexText(comment.user_name)}}</ion-label>
+            </div>
+
+            <div class="channel-post-div" > 
+              <ion-label class="channel-post white"><pre [ngStyle]="objStyle">{{comment.content}}</pre></ion-label>
+            </div>
+  
+            <div class="channel-post-heart-comment-div">
+              <img class="like" [ngClass]="{'like-s': checkLikedComment(comment.id)}" (click)="likeComment(comment.id)">
+              <ion-label class="like-text" [ngClass]="{'like-s-text': checkLikedComment(comment.id)}" (click)="likeComment(comment.id)">{{comment.likes}}</ion-label>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="line-div white-line" *ngIf="i!=commentList.length-1"></div>
+    </div>
+  </div>
+
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll-content
+      loadingSpinner="bubbles"
+      loadingText="{{'common.loadingText'|translate}}">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
+
+  <!-- OPTIONS POPUP -->
+  <ion-row class="global-options" [class.global-darkOptions]="theme.darkMode" *ngIf="menuService.optionsOn">
+    <div class="close ion-activatable ripple" (click)="menuService.hideOptions()">
+      <img *ngIf="!theme.darkMode" src="/assets/icons/cross.svg">
+      <img *ngIf="theme.darkMode" src="/assets/icons/darkmode/cross.svg">
+      <ion-ripple-effect></ion-ripple-effect>
+    </div>
+    <ion-col size="4.5" class="left-col" (click)="menuService.shareChannel()">
+      <div class="option">
+        <ion-icon mode="ios" name="share"></ion-icon>
+        <span>Share</span> 
+      </div>
+    </ion-col>
+    <ion-col size="3" class="middle-col">
+      <div class="divider"></div>
+    </ion-col>
+    <ion-col size="4.5" class="right-col" (click)="menuService.deleteChannel()">
+      <div class="option">
+        <ion-icon mode="ios" name="trash"></ion-icon>
+        <span>Unfollow</span>
+      </div>
+    </ion-col>
+  </ion-row>
+
+  
+  
+   <!--  <div class="image-text-layout-div" >
       <ion-card-content class="ion-no-padding ion-no-margin">
           <div class="menu-div"  (click)="menuMore()">
             <img  src="./assets/images/dots-three-vertical.svg" *ngIf="!theme.darkMode" style="width:12.4;height:3px">
@@ -62,7 +173,6 @@
     </div>
     <div class="line-div"></div>
 
-    <!-- <div *ngIf="refreshCommFinish"> -->
       <div *ngFor="let comment of commentList let i=index">
         <div class="channel-img-small-div">
           <ion-avatar class="avatar-div" style="margin-top: 5px;">
@@ -77,7 +187,7 @@
                 <ion-icon name="more" mode="ios" style="vertical-align: middle; float: right; "></ion-icon>
               </div>
     
-              <div  (click)="navTo(post.nodeId, post.channel_id)"> 
+              <div> 
                 <ion-label class="channel-desc-small">@{{indexText(comment.user_name)}}</ion-label>
               </div>
 
@@ -93,13 +203,5 @@
           </div>
         </div>
         <div class="line-div white-line" *ngIf="i!=commentList.length-1"></div>
-      </div>
-
-      
-      <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
-        <ion-infinite-scroll-content
-          loadingSpinner="bubbles"
-          loadingText="{{'common.loadingText'|translate}}">
-        </ion-infinite-scroll-content>
-      </ion-infinite-scroll>
+      </div> -->
 </ion-content>
