--- a/src/app/pages/feeds/home/postdetail/postdetail.page.scss
+++ b/src/app/pages/feeds/home/postdetail/postdetail.page.scss
@@ -1,3 +1,7 @@
+.container {
+    min-height: 100%;
+}
+
 .darkContainer{
     .channel-detail-div .channel-detail-text-div .white{
         color: #ffffff;
