--- a/src/app/pages/feeds/notification/notification.page.scss
+++ b/src/app/pages/feeds/notification/notification.page.scss
@@ -11,7 +11,7 @@
         ion-row {
             width: 100%;
             padding: 10px;
-            border-bottom: 2px solid rgba(34, 34, 34, 0.07);
+            border-bottom: 2px solid #f0f1ff;
 
             .left-col {
                 display: flex;
