--- a/src/app/pages/feeds/search/search.page.html
+++ b/src/app/pages/feeds/search/search.page.html
@@ -43,7 +43,7 @@
           class="left-col"
           (click)="navTo(channel.nodeId, channel.id)"
         >
-          <div class="avatar-container">
+          <div class="feedAvatar" [class.dark-feedAvatar]="theme.darkMode">
             <img src={{parseChannelAvatar(channel.avatar)}}>
             <div class="offline" [class.online]="nodeStatus[channel.nodeId] === 0"></div>
           </div>
