--- a/src/global.scss
+++ b/src/global.scss
@@ -57,6 +57,38 @@
   src: url('assets/fonts/montserrat/Montserrat-Black.ttf');
 }
 
+@font-face {
+  font-family: 'SourceSansPro';
+  font-weight: 400;
+  font-style: normal;
+  src: url('assets/fonts/sourcesanspro/SourceSansPro-Light.ttf');
+}
+@font-face {
+  font-family: 'SourceSansPro';
+  font-weight: 500;
+  font-style: normal;
+  src: url('assets/fonts/sourcesanspro/SourceSansPro-Regular.ttf');
+}
+@font-face {
+  font-family: 'SourceSansPro';
+  font-weight: 600;
+  font-style: normal;
+  src: url('assets/fonts/sourcesanspro/SourceSansPro-SemiBold.ttf');
+}
+@font-face {
+  font-family: 'SourceSansPro';
+  font-weight: 700;
+  font-style: normal;
+  src: url('assets/fonts/sourcesanspro/SourceSansPro-Bold.ttf');
+}
+
+@font-face {
+  font-family: 'SourceSansPro';
+  font-weight: 900;
+  font-style: normal;
+  src: url('assets/fonts/sourcesanspro/SourceSansPro-Black.ttf');
+}
+
 * {
   font-family: 'Montserrat' !important;
 }
@@ -108,6 +140,7 @@ ion-input {
 /** Page filter when popup is showing **/
 .blur {
   filter: blur(2.5px);
+  --ion-backdrop-color:#000000;
 }
 
 /** ion-slides pagination **/
@@ -122,119 +155,6 @@ ion-input {
   --background: transparent;
   width: 100%;
 }
-
-/********** Global Options **********/
-.global-options {
-  position: sticky;
-  z-index: 10;
-  left: 5%;
-  right: 5%;
-  width: 90%;
-  bottom: 20px;
-  height: 139.6px;
-  background-color: #f8f8ff;
-  box-shadow: 0 3px 10px 0 rgba(22, 23, 64, 0.12);
-  border-radius: 25px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-
-  animation: slideUp;
-  animation-duration: 333ms;
-  animation-fill-mode: forwards;
-
-  @keyframes slideUp {
-    0% { bottom: -100px }
-    100% { bottom: 20px }
-  }
-
-  .close {
-      position: absolute;
-      top: -45px;
-      width: 33px;
-      height: 33px;
-      border-radius: 100%;
-      background: #f8f8ff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      box-shadow: 0 1px 3px 0 rgba(22, 23, 64, 0.12);
-
-      img {
-          width: 10px;
-          height: 10px;
-      }
-  }
-
-  ion-col {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-
-      .option {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-
-          ion-icon {
-              margin-bottom: 15px;
-              width: 24px;
-              height: 24px;
-          }
-
-          span {
-              font-size: 12px;
-              font-weight: 600;
-              color: #2e2f4e;
-          }
-      }
-  }
-
-  .left-col {
-      align-items: flex-end;
-  }
-
-  .middle-col {
-      align-items: center;
-
-      .divider {
-          width: 1.5px;
-          height: 60px;
-          background-color: #dbdbdb;
-      }
-  }
-
-  .right-col {
-      align-items: flex-start;
-      padding-left: 0;
-  }
-}
-
-/********** Global Dark Options **********/
-.global-darkOptions {
-  background-color: #2e2f4e;
-  box-shadow: 0 3px 15px 0 #151626;
-
-  .close {
-      background-color: #2e2f4e;
-      box-shadow: 0 1px 5px 0 #151626;
-  }
-
-  ion-col {
-      .option {
-          span {
-              color: #ffffff;
-          }
-      }
-  }
-
-  .middle-col {
-      .divider {
-      }
-  }
-}
-
 
 ion-header {
   ion-toolbar {
