--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -389,6 +389,44 @@ $segment-button-md-text-color: #007AFF !important;
     }
 }
 
+/********************** GLOBAL FEED AVATAR  **********************/
+.feedAvatar {
+  display: flex;
+  align-items: center;
+  position: relative;
+  border-radius: 50%;
+
+  img {
+    border-radius: 50%;
+    object-fit: cover;
+    overflow: hidden;
+    height: 55px;
+    width: 55px;
+  }
+
+  .offline {
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    z-index: 10;
+    top: 0px;
+    left: 0px;
+    background: #cdcde6;
+    border-radius: 100%;
+    border: 2px solid #f8f8ff;
+  }
+
+  .online {
+    background: #2dd36f;
+  }
+}
+
+.dark-feedAvatar {
+  .offline {
+    border: 2px solid #191a2f;
+  }
+}
+
 /********************** GLOBAL CHANNEL LISTS **********************/
 .channel-list {
   background: transparent;
@@ -408,37 +446,6 @@ $segment-button-md-text-color: #007AFF !important;
         display: flex;
         align-items: center;
         justify-content: flex-end;
-
-        .avatar-container {
-          display: flex;
-          align-items: center;
-          position: relative;
-          border-radius: 50%;
-    
-          img {
-            border-radius: 50%;
-            object-fit: cover;
-            overflow: hidden;
-            height: 55px;
-            width: 55px;
-          }
-
-          .offline {
-            width: 15px;
-            height: 15px;
-            position: absolute;
-            z-index: 10;
-            top: 0px;
-            left: 0px;
-            background: #cdcde6;
-            border-radius: 100%;
-            border: 2px solid #f8f8ff;
-          }
-
-          .online {
-            background: #2dd36f;
-          }
-        }
       }
 
       .middle-col {
@@ -530,20 +537,245 @@ $segment-button-md-text-color: #007AFF !important;
 .darkChannelList {
   ion-item {
     border-bottom: 1.5px solid #2f305a;
+  }
 
-    .channel-row {
-      .left-col {
-        .avatar-container {
-          .offline {
-            border: 2px solid #191a2f;
+  .removeBorder {
+    border-bottom: none;
+  }
+}
+
+/********************** GLOBAL POSTS **********************/
+.post-grid {
+  border-bottom: 2px solid #f0f1ff;
+  padding: 20px 20px 20px 0;
+
+  .post-row {
+    .img-col {
+      display: flex;
+      align-items: flex-start;
+      justify-content: flex-end;
+    }
+
+    .content-col {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+
+      .top-row {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        padding: 0;
+
+        .left-col {
+          display: flex;
+          align-items: center;
+          padding: 0;
+
+          ion-label {
+            font-size: 15px;
+            font-weight: 700;
+            color: #000000;
+
+            span {
+              position: relative;
+              bottom: 1.5px;
+              font-size: 10px;
+              font-weight: 500;
+              color: #8888b0;
+            }
+          }
+        }
+
+        img {
+          width: 18.4px;
+          height: 4.4px;
+          overflow: visible;              
+        }
+      }
+
+      p {
+        margin: 0;
+        font-size: 12px;
+        font-weight: 600;
+        color: #8888b0;
+      }
+
+      h2 {
+        margin: 10px 0;
+        font-family: 'SourceSansPro' !important;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.25;
+      }
+
+      .post-img {
+        width: 100%;
+        height: 191px;
+        object-fit: cover;
+        border-radius: 11px;
+      }
+
+      .bottom-row {
+        width: 100%;
+        margin-top: 10px;
+        padding: 0;
+
+        ion-col {
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+
+          ion-label {
+            margin-left: 5px;
+            font-size: 10px;
+            font-weight: 600;
+            color: #a0a2c4;
+          }
+
+          .liked {
+            color: rgb(209, 81, 81);
+          }
+
+          .commented {
+            color: #007AFF;
+          }
+
+          img {
+            width: 16px;
+            height: 14px;
+            overflow: visible;
           }
         }
       }
     }
   }
+}
 
-  .removeBorder {
-    border-bottom: none;
+.darkPostGrid {
+  border-bottom: 2px solid #2e2f4e;
+  .post-row {
+    .content-col {
+      .top-row {
+        .left-col {
+          ion-label {
+            color: #ffffff;
+          }
+        }
+      }
+    }
+  }
+}
+
+/********************** GLOBAL OPTIONS POPUP **********************/
+.global-options {
+  position: sticky;
+  z-index: 10;
+  left: 5%;
+  right: 5%;
+  width: 90%;
+  bottom: 20px;
+  height: 139.6px;
+  background-color: #f8f8ff;
+  box-shadow: 0 3px 10px 0 rgba(22, 23, 64, 0.12);
+  border-radius: 25px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  animation: slideUp;
+  animation-duration: 333ms;
+  animation-fill-mode: forwards;
+
+  @keyframes slideUp {
+    0% { bottom: -100px }
+    100% { bottom: 20px }
+  }
+
+  .close {
+      position: absolute;
+      top: -45px;
+      width: 33px;
+      height: 33px;
+      border-radius: 100%;
+      background: #f8f8ff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      box-shadow: 0 1px 3px 0 rgba(22, 23, 64, 0.12);
+
+      img {
+          width: 10px;
+          height: 10px;
+      }
+  }
+
+  ion-col {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      .option {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+
+          ion-icon {
+              margin-bottom: 15px;
+              width: 24px;
+              height: 24px;
+          }
+
+          span {
+              font-size: 12px;
+              font-weight: 600;
+              color: #2e2f4e;
+          }
+      }
+  }
+
+  .left-col {
+      align-items: flex-end;
+  }
+
+  .middle-col {
+      align-items: center;
+
+      .divider {
+          width: 1.5px;
+          height: 60px;
+          background-color: #dbdbdb;
+      }
+  }
+
+  .right-col {
+      align-items: flex-start;
+      padding-left: 0;
+  }
+}
+
+.global-darkOptions {
+  background-color: #2e2f4e;
+  box-shadow: 0 3px 15px 0 #151626;
+
+  .close {
+      background-color: #2e2f4e;
+      box-shadow: 0 1px 5px 0 #151626;
+  }
+
+  ion-col {
+      .option {
+          span {
+              color: #ffffff;
+          }
+      }
+  }
+
+  .middle-col {
+      .divider {
+      }
   }
 }
 
