--- a/src/app/pages/feeds/comment/comment.page.html
+++ b/src/app/pages/feeds/comment/comment.page.html
@@ -1,3 +1,47 @@
+<ion-header *ngIf="connectionStatus == 1">
+  <div class="offline-header"></div>
+</ion-header>
+
+<ion-content>
+  <ion-list class="channel-list" [class.darkChannelList]="theme.darkMode">
+    <ion-item class="removeBorder" lines="none">
+      <ion-row class="channel-row ion-activatable ripple">
+        <ion-col
+          size="2.15"
+          class="left-col"
+        >
+          <div class="feedAvatar" [class.dark-feedAvatar]="theme.darkMode">
+            <img src={{channelAvatar}}>
+            <div class="offline" [class.online]="nodeStatus[nodeId] == 0"></div>
+          </div>
+        </ion-col>
+        <ion-col
+          size="9.5"
+          class="middle-col"
+          (press)="pressName(channelName)"
+        >
+          <ion-label>{{ channelName }}</ion-label>
+          <ion-row>
+            <img src="./assets/images/bubble2.svg"> <br>
+            <p><span>{{ subscribers }}</span> {{ 'common.followers' | translate }}</p>
+          </ion-row>
+        </ion-col>
+      </ion-row>
+    </ion-item>
+
+    <ion-textarea clearOnEdit="true" autofocus="true" placeholder="{{'CommentPage.enterComments'|translate}}" [(ngModel)]="newComment">
+    </ion-textarea>
+
+    <ion-row class="submit-row">
+      <ion-col offset="7.5" size="4.5">
+        <ion-button (click)="publishComment()">
+          <ion-label>Post</ion-label>
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-list>
+</ion-content>
+
 <!-- <ion-header *ngIf="connectionStatus == 1">
   <div class="offline-header"></div>
 </ion-header>
@@ -51,47 +95,3 @@
 </div>
 
 </ion-content> -->
-
-<ion-header *ngIf="connectionStatus == 1">
-  <div class="offline-header"></div>
-</ion-header>
-
-<ion-content>
-  <ion-list class="channel-list" [class.darkChannelList]="theme.darkMode">
-    <ion-item class="removeBorder" lines="none">
-      <ion-row class="channel-row ion-activatable ripple">
-        <ion-col
-          size="2.15"
-          class="left-col"
-        >
-          <div class="avatar-container">
-            <img src={{channelAvatar}}>
-            <div class="offline" [class.online]="nodeStatus[nodeId] == 0"></div>
-          </div>
-        </ion-col>
-        <ion-col
-          size="9.5"
-          class="middle-col"
-          (press)="pressName(channelName)"
-        >
-          <ion-label>{{ channelName }}</ion-label>
-          <ion-row>
-            <img src="./assets/images/bubble2.svg"> <br>
-            <p><span>{{ subscribers }}</span> {{ 'common.followers' | translate }}</p>
-          </ion-row>
-        </ion-col>
-      </ion-row>
-    </ion-item>
-
-    <ion-textarea clearOnEdit="true" autofocus="true" placeholder="{{'CommentPage.enterComments'|translate}}" [(ngModel)]="newComment">
-    </ion-textarea>
-
-    <ion-row class="submit-row">
-      <ion-col offset="7.5" size="4.5">
-        <ion-button (click)="publishComment()">
-          <ion-label>Post</ion-label>
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-list>
-</ion-content>
