--- a/src/app/pages/feeds/home/channels/channels.page.html
+++ b/src/app/pages/feeds/home/channels/channels.page.html
@@ -4,7 +4,6 @@
 
 <ion-content [class.darkContainer]="theme.darkMode" [ngClass]="{'translucent-mask': isShowPrompt}">
     
-  <!--on-refresher-->
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" pullFactor="0.5">
     <ion-refresher-content
       class="refresh"
@@ -16,12 +15,119 @@
     </ion-refresher-content>
   </ion-refresher>
 
+  <!-- EMPTY CONTAINER -->
+  <div *ngIf="postList.length === 0" class="empty-container">
+    <img src="./assets/images/empty-feeds-icon.svg">
+    <h1>{{ 'HomePage.allempty' | translate }}</h1>
+    <p>{{ 'common.nopostyet' | translate }}</p>
+  </div>
+
   <div *ngIf="checkChannelIsMine() == 0" class="edit" (click)="clickEdit()">
     <ion-img src="./assets/images/edit.svg" *ngIf="!theme.darkMode"></ion-img>
     <ion-img src="./assets/images/edit-dark.svg" *ngIf="theme.darkMode"></ion-img>
   </div> 
 
-  <div class="channel-img-div">
+  <!-- CHANNEL HEADER -->
+  <ion-grid class="channel-header">
+    <div class="feedAvatar" [class.dark-feedAvatar]="theme.darkMode">
+      <img src={{channelAvatar}}>
+      <div class="offline" [class.online]="nodeStatus[nodeId] == 0"></div>
+    </div>
+    <h1>{{ channelName }}</h1>
+    <ion-row class="sub-row">
+      <img src="./assets/images/bubble2.svg"> <br>
+      <ion-label><span>{{ channelSubscribes }}</span> {{ 'common.followers' | translate }}</ion-label>
+    </ion-row>
+    <p>{{ channelDesc }}</p>
+    <ion-row class="channel-btns-row">
+      <ion-col size="3">
+        <ion-button *ngIf="!followStatus" class="unsubscribed" fill="outline" (click)="subscribe()">
+          <ion-label >{{'SearchPage.follow' | translate}}</ion-label>
+        </ion-button>
+        <ion-button *ngIf="followStatus" class="subscribed" (click)="unsubscribe()">
+          <ion-label>{{ 'SearchPage.following' | translate }}</ion-label>
+        </ion-button>
+      </ion-col>
+      <ion-col size="3">
+        <ion-button class="tip" (click)="tip()">
+          <ion-label>{{ 'ChannelsPage.tip' | translate }}</ion-label>
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <!-- POSTS -->
+  <div *ngIf="postList.length > 0" [class.blur]="menuService.optionsOn">
+    <ion-grid *ngFor="let post of postList let i=index" class="post-grid ion-activatable ripple" [class.darkPostGrid]="theme.darkMode">
+      <ion-row class="post-row">
+        <ion-col class="img-col" size="2.5">
+          <div class="feedAvatar" [class.dark-feedAvatar]="theme.darkMode">
+            <img src={{channelAvatar}}>
+            <div class="offline" [class.online]="nodeStatus[post.nodeId] == 0"></div>
+          </div>
+        </ion-col>
+        <ion-col class="content-col" size="9.5">
+          <ion-row class="top-row">
+            <ion-col class="left-col" size="11" (press)="pressName(post.nodeId, post.channel_id)">
+              <ion-label>
+                {{ getChannel(post.nodeId, post.channel_id) }}
+                <span>- {{ handleDisplayTime(post.created_at) }}</span>
+              </ion-label>
+            </ion-col>
+            <img 
+              [src]="!theme.darkMode ? './assets/images/dots-three-vertical.svg' : './assets/images/dots-three-vertical-dark.svg'"
+              (click)="menuService.showOptions(post.nodeId, post.channel_id)"
+            >
+          </ion-row>
+          <p>@{{ getChannelOwnerName(post.nodeId, post.channel_id) }}</p>
+          <h2 (click)="!menuService.optionsOn ? navToPostDetail(post.nodeId, post.channel_id, post.id) : menuService.hideOptions()">{{ getContentText(post.content) }}</h2>
+          <img 
+            *ngIf="getImage(post.nodeId, post.channel_id, post.id)"
+            src="{{getImage(post.nodeId, post.channel_id, post.id)}}"
+            class="post-img"
+            (click)="!menuService.optionsOn ? navToPostDetail(post.nodeId, post.channel_id, post.id) : menuService.hideOptions()"
+          > 
+          <ion-row class="bottom-row">
+            <ion-col size="2.25">
+              <img [src]="checkMyLike(post.nodeId, post.channel_id, post.id) ? '/assets/images/like-s.svg' : '/assets/images/like.svg'" (click)="like(post.nodeId, post.channel_id, post.id)">
+              <ion-label [class.liked]="checkMyLike(post.nodeId, post.channel_id, post.id)" (click)="like(post.nodeId, post.channel_id, post.id)">{{ post.likes }}</ion-label>
+            </ion-col>
+            <ion-col>
+              <img [src]="post.comments ? '/assets/images/comment-s.svg' : '/assets/images/bubble-line.svg'" (click)="showCommentPage(post.nodeId, post.channel_id, post.id)">
+              <ion-label [class.commented]="post.comments" (click)="showCommentPage(post.nodeId, post.channel_id, post.id)">{{ post.comments }}</ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-col>
+      </ion-row>
+      <ion-ripple-effect></ion-ripple-effect>
+    </ion-grid>
+  </div>
+
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll-content
+      loadingSpinner="bubbles"
+      loadingText="{{'common.loadingText'|translate}}">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
+
+  <!-- OPTIONS POPUP -->
+  <ion-row class="global-options" [class.global-darkOptions]="theme.darkMode" *ngIf="menuService.optionsOn">
+    <div class="close ion-activatable ripple" (click)="menuService.hideOptions()">
+      <img *ngIf="!theme.darkMode" src="/assets/icons/cross.svg">
+      <img *ngIf="theme.darkMode" src="/assets/icons/darkmode/cross.svg">
+      <ion-ripple-effect></ion-ripple-effect>
+    </div>
+    <ion-col size="12" (click)="menuService.shareChannel()">
+      <div class="option">
+        <ion-icon mode="ios" name="share"></ion-icon>
+        <span>Share</span> 
+      </div>
+    </ion-col>
+  </ion-row>
+
+</ion-content>
+
+<!-- <div class="channel-img-div">
     <ion-avatar class="channel-img" style="width:80px ; height: 80px;position: relative;">
       <div class="feed-source-card-status chancecirclePosition">
         <div class="online-circle"  *ngIf="nodeStatus[nodeId] == 0"></div>
@@ -95,83 +201,14 @@
       color: #fdfeff;">{{'ChannelsPage.tip'|translate}}</ion-label>
     </ion-button>
   </div>
+ -->
 
-  <div *ngIf="postList.length===0" style="margin-top: 80px;">
+ <!--  <div *ngIf="postList.length===0" style="margin-top: 80px;">
     <div style="text-align: center;">
       <img src="./assets/images/empty-feeds-icon.svg">
     </div>
     <div class="all-empty" style="margin-top: 10px;">{{ 'common.nopostyet' | translate }}</div>
-  </div>
-
-  <div *ngIf="postList.length > 0" [class.blur]="menuService.optionsOn">
-    <ion-grid *ngFor="let post of postList let i=index" class="post-grid ion-activatable ripple" [class.darkPostGrid]="theme.darkMode">
-      <ion-row class="post-row">
-        <ion-col class="img-col" size="2.5">
-          <div class="feedAvatar" [class.dark-feedAvatar]="theme.darkMode">
-            <img src={{channelAvatar}}>
-            <div class="offline" [class.online]="nodeStatus[post.nodeId] == 0"></div>
-          </div>
-        </ion-col>
-        <ion-col class="content-col" size="9.5">
-          <ion-row class="top-row">
-            <ion-col class="left-col" size="11" (press)="pressName(post.nodeId, post.channel_id)">
-              <ion-label>
-                {{ getChannel(post.nodeId, post.channel_id) }}
-                <span>- {{ handleDisplayTime(post.created_at) }}</span>
-              </ion-label>
-            </ion-col>
-            <img 
-              [src]="!theme.darkMode ? './assets/images/dots-three-vertical.svg' : './assets/images/dots-three-vertical-dark.svg'"
-              (click)="menuService.showOptions(post.nodeId, post.channel_id)"
-            >
-          </ion-row>
-          <p>@{{ getChannelOwnerName(post.nodeId, post.channel_id) }}</p>
-          <h2 (click)="!menuService.optionsOn ? navToPostDetail(post.nodeId, post.channel_id, post.id) : menuService.hideOptions()">{{ getContentText(post.content) }}</h2>
-          <img 
-            *ngIf="getImage(post.nodeId, post.channel_id, post.id)"
-            src="{{getImage(post.nodeId, post.channel_id, post.id)}}"
-            class="post-img"
-            (click)="!menuService.optionsOn ? navToPostDetail(post.nodeId, post.channel_id, post.id) : menuService.hideOptions()"
-          > 
-          <ion-row class="bottom-row">
-            <ion-col size="2.25">
-              <img [src]="checkMyLike(post.nodeId, post.channel_id, post.id) ? '/assets/images/like-s.svg' : '/assets/images/like.svg'" (click)="like(post.nodeId, post.channel_id, post.id)">
-              <ion-label [class.liked]="checkMyLike(post.nodeId, post.channel_id, post.id)" (click)="like(post.nodeId, post.channel_id, post.id)">{{ post.likes }}</ion-label>
-            </ion-col>
-            <ion-col>
-              <img [src]="post.comments ? '/assets/images/comment-s.svg' : '/assets/images/bubble-line.svg'" (click)="showCommentPage(post.nodeId, post.channel_id, post.id)">
-              <ion-label [class.commented]="post.comments" (click)="showCommentPage(post.nodeId, post.channel_id, post.id)">{{ post.comments }}</ion-label>
-            </ion-col>
-          </ion-row>
-        </ion-col>
-      </ion-row>
-      <ion-ripple-effect></ion-ripple-effect>
-    </ion-grid>
-  </div>
-
-  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
-    <ion-infinite-scroll-content
-      loadingSpinner="bubbles"
-      loadingText="{{'common.loadingText'|translate}}">
-    </ion-infinite-scroll-content>
-  </ion-infinite-scroll>
-
-  <!-- OPTIONS POPUP -->
-  <ion-row class="global-options" [class.global-darkOptions]="theme.darkMode" *ngIf="menuService.optionsOn">
-    <div class="close ion-activatable ripple" (click)="menuService.hideOptions()">
-      <img *ngIf="!theme.darkMode" src="/assets/icons/cross.svg">
-      <img *ngIf="theme.darkMode" src="/assets/icons/darkmode/cross.svg">
-      <ion-ripple-effect></ion-ripple-effect>
-    </div>
-    <ion-col size="12" (click)="menuService.shareChannel()">
-      <div class="option">
-        <ion-icon mode="ios" name="share"></ion-icon>
-        <span>Share</span> 
-      </div>
-    </ion-col>
-  </ion-row>
-
-</ion-content>
+  </div> -->
 
 <!--  <div *ngFor="let post of postList let i=index" style="margin-top: 25px;">
       <div class="image-text-layout-div" >
