--- a/src/app/pages/feeds/home/channels/channels.page.scss
+++ b/src/app/pages/feeds/home/channels/channels.page.scss
@@ -1,3 +1,108 @@
+.empty-container {
+    height: 50%;
+}
+
+.channel-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 40px 0;
+
+    .feedAvatar {
+        img {
+            width: 84px;
+            height: 84px;
+        }
+      
+        .offline {
+          width: 20px;
+          height: 20px;
+          border-width: 3px;
+        }
+    }
+
+    h1 {
+        margin: 10px;
+        font-size: 25px;
+        font-weight: 700;
+    }
+
+    .sub-row {
+        padding: 0;
+        display: flex;
+        align-items: center;
+
+        img {
+            width: 18.1px;
+            height: 14.7px;
+            object-fit: contain;
+            margin-right: 3px;
+        }
+
+        ion-label {
+            margin: 0;
+            font-size: 10px;
+            font-weight: 600;
+            color: #8888b0;
+
+            span {
+                font-size: 13px;
+                font-weight: 700;
+            }
+        }
+    }
+    
+    p {
+        margin: 5px 0 10px;
+        font-size: 13px;
+        font-weight: 500;
+        line-height: 1.43;
+        letter-spacing: 0.7px;
+        text-align: center;
+    }
+
+    .channel-btns-row {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+
+        ion-button {
+            width: 100%;
+            height: 30px;
+            --border-radius: 30px;
+            --box-shadow: none;
+        
+            ion-label {
+              font-size: 9px !important;
+              font-weight: 700;
+              padding: 0;
+              overflow: hidden;
+            }
+        }
+
+        .unsubscribed {
+            --border-width: 1.5px;
+            --border-style: solid;
+            --border-color: #8888b0;
+            --background: transparent;
+            --background-activated: transparent;
+            --background-activated-opacity: none;
+            --background-focused: transparent;
+            --background-focused-opacity: none;
+  
+            ion-label {
+               --color:#8888b0;
+            }
+        }
+
+        .tip {
+            --background: #a067ff;
+        }
+    }
+}
+
 .edit{
     position:absolute;
     z-index: 999;
