--- a/src/app/pages/feeds/home/postdetail/postdetail.page.html
+++ b/src/app/pages/feeds/home/postdetail/postdetail.page.html
@@ -2,7 +2,7 @@
   <div class="offline-header"></div>
 </ion-header>
 
-<ion-content [class.darkContainer]="theme.darkMode">
+<ion-content>
 
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" pullFactor="0.5">
     <ion-refresher-content
@@ -16,6 +16,8 @@
   </ion-refresher>
 
   <div class="container">
+
+    <!-- POST -->
     <ion-grid class="post-grid" [class.darkPostGrid]="theme.darkMode" [class.blur]="menuService.optionsOn">
       <ion-row class="post-row">
         <ion-col class="img-col" size="2.5">
@@ -59,37 +61,31 @@
       </ion-row>
     </ion-grid>
 
-    <div *ngFor="let comment of commentList let i=index">
-      <div class="channel-img-small-div">
-        <ion-avatar class="avatar-div" style="margin-top: 5px;">
-          <img *ngIf="avatar == ''" class="profile-img" src="./assets/images/default-contact.svg">
-          <img *ngIf="avatar != ''" class="profile-img" [src]="avatar">
-        </ion-avatar> 
-        <div class="channel-detail-div">
-          <div class="channel-detail-text-div">
-            <div style="height: 100%; vertical-align: middle;" > 
-              <ion-label class="channel-title-small white">@{{indexText(comment.user_name)}}</ion-label>
-              <ion-label class="channel-ts">- {{handleDisplayTime(comment.created_at)}}</ion-label>
-              <ion-icon name="more" mode="ios" style="vertical-align: middle; float: right; "></ion-icon>
-            </div>
-  
-            <div> 
-              <ion-label class="channel-desc-small">@{{indexText(comment.user_name)}}</ion-label>
-            </div>
-
-            <div class="channel-post-div" > 
-              <ion-label class="channel-post white"><pre [ngStyle]="objStyle">{{comment.content}}</pre></ion-label>
-            </div>
-  
-            <div class="channel-post-heart-comment-div">
-              <img class="like" [ngClass]="{'like-s': checkLikedComment(comment.id)}" (click)="likeComment(comment.id)">
-              <ion-label class="like-text" [ngClass]="{'like-s-text': checkLikedComment(comment.id)}" (click)="likeComment(comment.id)">{{comment.likes}}</ion-label>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="line-div white-line" *ngIf="i!=commentList.length-1"></div>
-    </div>
+    <!-- COMMENTS -->
+    <ion-grid *ngFor="let comment of commentList let i=index" class="post-grid comment-grid" [class.darkPostGrid]="theme.darkMode" [class.blur]="menuService.optionsOn">
+      <ion-row class="post-row">
+        <ion-col class="img-col" size="2.5">
+          <img class="comment-avatar" [src]="avatar ? avatar : './assets/images/default-contact.svg'">
+        </ion-col>
+        <ion-col class="content-col" size="9.5">
+          <ion-row class="top-row">
+            <ion-col class="left-col" size="11" (press)="pressName()">
+              <ion-label>
+                {{ indexText(comment.user_name) }}
+                <span>- {{ handleDisplayTime(comment.created_at) }}</span>
+              </ion-label>
+            </ion-col>
+          </ion-row>
+          <h2 (click)="!menuService.optionsOn ? null : menuService.hideOptions()">{{ comment.content }}</h2>
+          <ion-row class="bottom-row">
+            <ion-col size="2.25">
+              <img [src]="checkLikedComment(comment.id) ? '/assets/images/like-s.svg' : '/assets/images/like.svg'" (click)="likeComment(comment.id)">
+              <ion-label [class.liked]="checkLikedComment(comment.id)" (click)="likeComment(comment.id)">{{ comment.likes }}</ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
 
   <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
@@ -123,8 +119,9 @@
     </ion-col>
   </ion-row>
 
-  
-  
+</ion-content>
+
+
    <!--  <div class="image-text-layout-div" >
       <ion-card-content class="ion-no-padding ion-no-margin">
           <div class="menu-div"  (click)="menuMore()">
@@ -172,6 +169,7 @@
         </div>
     </div>
     <div class="line-div"></div>
+    
 
       <div *ngFor="let comment of commentList let i=index">
         <div class="channel-img-small-div">
@@ -204,4 +202,3 @@
         </div>
         <div class="line-div white-line" *ngIf="i!=commentList.length-1"></div>
       </div> -->
-</ion-content>
