--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -204,6 +204,39 @@ html, body { height: 100%; scroll-behavior:smooth;}
 
 $segment-button-md-text-color: #007AFF !important;
 
+/********************** GLOBAL EMPTY FEEDS **********************/
+.empty-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  ion-img {
+      width: 82.5px;
+      height: 54.9px;
+  }
+
+  h1, p {
+      margin: 0;
+      color: #8888b0;
+  }
+
+  h1 {
+      margin-top: 20px;
+      font-size: 22px;
+      font-weight: 500;
+      letter-spacing: 1.2px;
+  }
+
+  p {
+      margin-top: 5px;
+      font-size: 15px;
+      font-weight: 500;
+      letter-spacing: 1.6px;
+  }
+}
+
 /********************** GLOBAL PROFILE HEADER **********************/
 .profile-header {
   display: flex;
@@ -236,74 +269,6 @@ $segment-button-md-text-color: #007AFF !important;
     font-weight: 500;
     text-align: center;
     overflow: hidden;
-  }
-}
-
-/********************** GLOBAL SEARCH **********************/
-.search-container {
-  display: flex;
-  justify-content: center;
-  padding: 12px 0;
-
-  ion-searchbar {
-    width: 85%;
-    padding: 0;
-    margin: 0;
-
-    .searchbar-input-container{
-      height: 40px;
-
-      .searchbar-input {
-        border-radius: 9px;
-        background-color: #f0f1ff;
-        font-size: 16px;
-        font-weight: 400;
-      }
-    }
-  }
-}
-
-.dark-search-container {
-  ion-searchbar {
-    .searchbar-input-container{
-      .searchbar-input {
-        color: #cfd1f7;
-        background-color: #2d2e4d;
-      }
-    }
-  }
-}
-
-/********************** GLOBAL EMPTY FEEDS **********************/
-.empty-container {
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  ion-img {
-      width: 82.5px;
-      height: 54.9px;
-  }
-
-  h1, p {
-      margin: 0;
-      color: #8888b0;
-  }
-
-  h1 {
-      margin-top: 20px;
-      font-size: 22px;
-      font-weight: 500;
-      letter-spacing: 1.2px;
-  }
-
-  p {
-      margin-top: 5px;
-      font-size: 15px;
-      font-weight: 500;
-      letter-spacing: 1.6px;
   }
 }
 
@@ -544,7 +509,7 @@ $segment-button-md-text-color: #007AFF !important;
   }
 }
 
-/********************** GLOBAL POSTS **********************/
+/********************** GLOBAL POSTS AND COMMENTS **********************/
 .post-grid {
   border-bottom: 2px solid #f0f1ff;
   padding: 20px 20px 20px 0;
@@ -603,7 +568,7 @@ $segment-button-md-text-color: #007AFF !important;
       }
 
       h2 {
-        margin: 10px 0;
+        margin: 7.5px 0 10px;
         font-family: 'SourceSansPro' !important;
         font-weight: 500;
         font-size: 16px;
@@ -776,6 +741,41 @@ $segment-button-md-text-color: #007AFF !important;
   .middle-col {
       .divider {
       }
+  }
+}
+
+/********************** GLOBAL SEARCH **********************/
+.search-container {
+  display: flex;
+  justify-content: center;
+  padding: 12px 0;
+
+  ion-searchbar {
+    width: 85%;
+    padding: 0;
+    margin: 0;
+
+    .searchbar-input-container{
+      height: 40px;
+
+      .searchbar-input {
+        border-radius: 9px;
+        background-color: #f0f1ff;
+        font-size: 16px;
+        font-weight: 400;
+      }
+    }
+  }
+}
+
+.dark-search-container {
+  ion-searchbar {
+    .searchbar-input-container{
+      .searchbar-input {
+        color: #cfd1f7;
+        background-color: #2d2e4d;
+      }
+    }
   }
 }
 
