--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -569,10 +569,14 @@ $segment-button-md-text-color: #007AFF !important;
 
       h2 {
         margin: 7.5px 0 10px;
-        font-family: 'SourceSansPro' !important;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.25;
+
+        pre {
+          margin: 0;
+          font-family: 'SourceSansPro' !important;
+          font-weight: 500;
+          font-size: 16px;
+          line-height: 1.25;
+        }
       }
 
       .post-img {
