--- a/src/app/pages/feeds/home/postdetail/postdetail.page.html
+++ b/src/app/pages/feeds/home/postdetail/postdetail.page.html
@@ -50,13 +50,15 @@
             (click)="!menuService.optionsOn ? null : menuService.hideOptions()"
           > 
           <ion-row class="bottom-row">
-            <ion-col size="2.25">
-              <img [src]="checkMyLike() ? '/assets/images/like-s.svg' : '/assets/images/like.svg'" (click)="like()">
-              <ion-label [class.liked]="checkMyLike()" (click)="like()">{{ likesNum }}</ion-label>
+            <ion-col size="2.25" (click)="like()">
+              <img [src]="checkMyLike() ? '/assets/images/like-s.svg' : '/assets/images/like.svg'">
+              <ion-label [class.liked]="checkMyLike()">{{ likesNum }}</ion-label>
             </ion-col>
-            <ion-col>
-              <img [src]="commentsNum ? '/assets/images/comment-s.svg' : '/assets/images/bubble-line.svg'" (click)="showCommentPage(nodeId,channelId,postId)">
-              <ion-label [class.commented]="commentsNum" (click)="showCommentPage(nodeId,channelId,postId)">{{ commentsNum }}</ion-label>
+            <ion-col (click)="showCommentPage(nodeId,channelId,postId)">
+              <img src="/assets/images/bubble-line.svg">
+              <ion-label>{{ commentsNum }}</ion-label>
+            <!--   <img [src]="commentsNum ? '/assets/images/comment-s.svg' : '/assets/images/bubble-line.svg'">
+              <ion-label [class.commented]="commentsNum">{{ commentsNum }}</ion-label> -->
             </ion-col>
           </ion-row>
         </ion-col>
@@ -82,9 +84,9 @@
             <pre>{{ comment.content }}</pre>
           </h2>
           <ion-row class="bottom-row">
-            <ion-col size="2.25">
-              <img [src]="checkLikedComment(comment.id) ? '/assets/images/like-s.svg' : '/assets/images/like.svg'" (click)="likeComment(comment.id)">
-              <ion-label [class.liked]="checkLikedComment(comment.id)" (click)="likeComment(comment.id)">{{ comment.likes }}</ion-label>
+            <ion-col size="2.25" (click)="likeComment(comment.id)">
+              <img [src]="checkLikedComment(comment.id) ? '/assets/images/like-s.svg' : '/assets/images/like.svg'">
+              <ion-label [class.liked]="checkLikedComment(comment.id)">{{ comment.likes }}</ion-label>
             </ion-col>
           </ion-row>
         </ion-col>
