--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -472,7 +472,7 @@ $segment-button-md-text-color: #007AFF !important;
             font-size: 9px !important;
             font-weight: 700;
             padding: 0;
-            overflow: hidden;
+            overflow: visible;
           }
         }
 
@@ -487,7 +487,7 @@ $segment-button-md-text-color: #007AFF !important;
           --background-focused-opacity: none;
 
           ion-label {
-             --color:#8888b0;
+             color:#8888b0;
           }
         }
       }
