--- a/src/app/pages/feeds/search/search.page.html
+++ b/src/app/pages/feeds/search/search.page.html
@@ -51,6 +51,7 @@
         <ion-col
           size="6.5"
           class="middle-col"
+          (click)="navTo(channel.nodeId, channel.id)"
           (press)="pressName(channel.name)"
         >
           <ion-label>{{ moreName(channel.name) }}</ion-label>
