--- a/src/app/pages/feeds/home/home.page.html
+++ b/src/app/pages/feeds/home/home.page.html
@@ -33,8 +33,8 @@
   <div *ngIf="postList.length > 0" [class.blur]="menuService.optionsOn">
     <ion-grid *ngFor="let post of postList let i=index" class="post-grid ion-activatable ripple" [class.darkPostGrid]="theme.darkMode">
       <ion-row class="post-row">
-        <ion-col class="img-col" size="2.5" (click)="navTo(post.nodeId, post.channel_id)">
-          <div class="feedAvatar" [class.dark-feedAvatar]="theme.darkMode">
+        <ion-col class="img-col" size="2.5">
+          <div class="feedAvatar" [class.dark-feedAvatar]="theme.darkMode" (click)="navTo(post.nodeId, post.channel_id)">
             <img src={{parseAvatar(post.nodeId,post.channel_id)}}>
             <div class="offline" [class.online]="nodeStatus[post.nodeId] == 0"></div>
           </div>
@@ -71,7 +71,7 @@
 <!--               <img [src]="post.comments ? '/assets/images/comment-s.svg' : '/assets/images/bubble-line.svg'">
               <ion-label [class.commented]="post.comments">{{post.comments}}</ion-label> -->
               <img src="/assets/images/bubble-line.svg">
-              <ion-label>{{post.comments}}</ion-label>
+              <ion-label>{{ post.comments }}</ion-label>
             </ion-col>
           </ion-row>
         </ion-col>
