--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -441,8 +441,8 @@ $segment-button-md-text-color: #007AFF !important;
               margin: 0;
               font-size: 10px;
               font-weight: 600;
-              color: #8888b0;
-
+              color: #a0a2c4;
+              
               span {
                 font-size: 13px;
                 font-weight: 700;
