#c8jc70 & #c8jc5q, fix createnewfeed and profileimage pg, fix importing avatar

--- a/src/app/components/myfeeds/myfeeds.component.scss
+++ b/src/app/components/myfeeds/myfeeds.component.scss
@@ -2,6 +2,9 @@
     margin-top: 50px;
 }
 
+.channel-list {
+    min-height: 100%;
+}
 
 .darkContainer{
     .channel-detail-div .channel-detail-text-div .white{
