--- a/src/app/pages/feeds/profileimage/profileimage.page.html
+++ b/src/app/pages/feeds/profileimage/profileimage.page.html
@@ -1,6 +1,66 @@
 <ion-header *ngIf="connectionStatus == 1">
   <div class="offline-header"></div>
 </ion-header>
+
+<ion-content>
+  <ion-grid>
+    <ion-row>
+      <!-- DEFAULT AVATARS -->
+      <ion-col 
+        *ngFor="let avatar of avatars"
+        [ngStyle]="{ 'background-image': 'url(' + avatar.image + ')' }"
+        size="2.5"
+        (click)="selectIndex(avatar.index, avatar.image)"
+      >
+        <div 
+          *ngIf="select === avatar.index"
+          class="check" 
+          [ngStyle]="{ 'border': theme.darkMode ? '4px solid #191a2f' : '4px solid #f8f8ff' }"
+          >
+          <ion-icon 
+            name="checkmark"
+            [ngStyle]="{ 'color': theme.darkMode ? '#191a2f' : '#f8f8ff' }"
+          >
+          </ion-icon>
+        </div>
+      </ion-col>
+      <!-- HAS IMPORTED AVATAR -->
+      <ion-col 
+        *ngIf="userAvatar"
+        [ngStyle]="{ 'background-image': 'url(' + userAvatar + ')' }"
+        class="userAvatar"
+        size="2.5"
+      >
+        <div 
+          *ngIf="select === 0"
+          class="check" 
+          [ngStyle]="{ 'border': theme.darkMode ? '4px solid #191a2f' : '4px solid #f8f8ff' }"
+          >
+          <ion-icon 
+            name="checkmark"
+            [ngStyle]="{ 'color': theme.darkMode ? '#191a2f' : '#f8f8ff' }"
+          >
+          </ion-icon>
+        </div>
+      </ion-col>
+      <!-- IMPORT AVATAR -->
+      <ion-col 
+        [ngStyle]="{ 'background-image': theme.darkMode ? 'url(/assets/images/profile-add-dark.svg)' : 'url(/assets/images/profile-add.svg)' }"
+        size="2.5"
+        (click)="selectIndex(0)"
+      >
+      </ion-col>
+    </ion-row>
+  
+    <ion-row class="btn-row">
+      <ion-button color="primary" (click)="confirm()">
+        <ion-label>{{ 'ProfileimagePage.confirm' | translate }}</ion-label>
+      </ion-button>
+    </ion-row>
+  </ion-grid>
+</ion-content>
+
+<!-- 
 <ion-content ion-padding>
   <ion-row class="margintop">
     <ion-col size="3">
@@ -97,3 +157,4 @@
 
   <div class="confirm" (click)="confirm()">{{'ProfileimagePage.confirm'|translate}}</div>
 </ion-content>
+ -->
