--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -313,7 +313,13 @@ $segment-button-md-text-color: #007AFF !important;
 /********************** GLOBAL BUTTONS **********************/
 .btn-row {
   margin-top: 55px;
-  width: 85%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+
+  ion-button {
+    width: 95%;
+  }
 }
 
 .btns-row {
@@ -442,7 +448,7 @@ $segment-button-md-text-color: #007AFF !important;
               font-size: 10px;
               font-weight: 600;
               color: #a0a2c4;
-              
+
               span {
                 font-size: 13px;
                 font-weight: 700;
@@ -658,7 +664,7 @@ $segment-button-md-text-color: #007AFF !important;
   animation-fill-mode: forwards;
 
   @keyframes slideUp {
-    0% { bottom: -100px }
+    0% { bottom: -200px }
     100% { bottom: 20px }
   }
 
