--- a/src/app/pages/feeds/profileimage/profileimage.page.scss
+++ b/src/app/pages/feeds/profileimage/profileimage.page.scss
@@ -37,7 +37,7 @@ ion-grid {
             }
         }
 
-        .userAvatar {
+        .uploadedAvatar {
             background-size: cover;
         }
     }
