Fixes to global btns

--- a/src/app/pages/feeds/comment/comment.page.scss
+++ b/src/app/pages/feeds/comment/comment.page.scss
@@ -4,7 +4,7 @@
     ion-item {
         .channel-row {
             .left-col {
-                justify-content: flex-start;
+                // justify-content: flex-start;
             }
         }
     }
