--- a/src/app/pages/feeds/createnewfeed/createnewfeed.page.scss
+++ b/src/app/pages/feeds/createnewfeed/createnewfeed.page.scss
@@ -1,6 +1,10 @@
 .container {
     padding: 0 20px 25px;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 
     ion-list {
         background: transparent;
@@ -51,6 +55,11 @@
         .removeBorder {
             border-bottom: none;
         }
+    }
+
+    .btn-row {
+        margin-top: 25px;
+        width: 95%;
     }
 }
 
