--- a/src/app/pages/feeds/feeds.page.html
+++ b/src/app/pages/feeds/feeds.page.html
@@ -11,7 +11,7 @@
     </ion-tab-button>
 
     <ion-tab-button>
-      <div class="add-tab" (click)="create()"></div>
+      <div class="add-tab" (click)="create($event)"></div>
     </ion-tab-button>
 
     <ion-tab-button tab="notification" (click)="notification()">
