--- a/src/app/components/postfrom/postfrom.component.html
+++ b/src/app/components/postfrom/postfrom.component.html
@@ -1,4 +1,43 @@
-<div [class.darkContainer]="theme.darkMode">
+<ion-grid [class.darkContainer]="theme.darkMode">
+  <h1>
+    Choose one of your Feeds 
+    to post from
+  </h1>
+  <ion-list class="channel-list" [class.darkChannelList]="theme.darkMode">
+    <ion-item
+      *ngFor="let channel of channels let i=index"
+      [class.removeBorder]="channel === channels[channels.length - 1]"
+      lines="none"
+      (click)="selectChannel(channel.nodeId,channel.id)"
+    >
+      <ion-row class="channel-row ion-activatable ripple">
+        <ion-col
+          size="3"
+          class="left-col"
+        >
+          <div class="feedAvatar" [class.dark-feedAvatar]="theme.darkMode">
+            <img src={{parseAvatar(channel.avatar)}}>
+            <div class="offline" [class.online]="nodeStatus[channel.nodeId] === 0"></div>
+          </div>
+        </ion-col>
+        <ion-col
+          size="9"
+          class="middle-col"
+          (press)="pressName(channel.name)"
+        >
+          <ion-label>{{ channel.name }}</ion-label>
+          <ion-row>
+            <img src="./assets/images/bubble2.svg"> <br>
+            <p><span>{{ channel.subscribers }}</span> {{ 'common.followers' | translate }}</p>
+          </ion-row>
+        </ion-col>
+        <ion-ripple-effect></ion-ripple-effect>
+      </ion-row>
+    </ion-item>
+  </ion-list>
+</ion-grid>
+
+<!-- <div [class.darkContainer]="theme.darkMode">
 <div class="post-from-text-div post-from-text-div-dark">
   <div class="post-from-text white">
     {{'PostfromComponent.des'|translate}}
@@ -41,3 +80,4 @@
 </div>
 
 </div>
+ -->
