#cenmc2 - Refine Post-detail pg akin to design

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -632,8 +632,16 @@ $segment-button-md-text-color: #007AFF !important;
         .left-col {
           ion-label {
             color: #ffffff;
+
+            span {
+              color: #cfd1f7;
+            }
           }
         }
+      }
+
+      p {
+        color: #cfd1f7;
       }
     }
   }
