--- a/src/app/components/likes/likes.component.html
+++ b/src/app/components/likes/likes.component.html
@@ -48,7 +48,7 @@
             <img [src]="checkMyLike(post.nodeId, post.channel_id, post.id) ? '/assets/images/like-s.svg' : '/assets/images/like.svg'">
             <ion-label [class.liked]="checkMyLike(post.nodeId, post.channel_id, post.id)">{{ post.likes }}</ion-label>
           </ion-col>
-          <ion-col (click)="showCommentPage(post.nodeId, post.channel_id, post.id)">
+          <ion-col size="2.25" (click)="showCommentPage(post.nodeId, post.channel_id, post.id)">
             <img src="/assets/images/bubble-line.svg">
             <ion-label>{{ post.comments }}</ion-label>
         <!--     <img [src]="post.comments ? '/assets/images/comment-s.svg' : '/assets/images/bubble-line.svg'">
