--- a/src/app/pages/feeds/home/home.page.html
+++ b/src/app/pages/feeds/home/home.page.html
@@ -82,8 +82,9 @@
  
   <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
     <ion-infinite-scroll-content
-      loadingSpinner="bubbles"
-      loadingText="{{'common.loadingText'|translate}}">
+      class="ion-padding-top"
+      loadingSpinner="crescent"
+    >
     </ion-infinite-scroll-content>
   </ion-infinite-scroll>
 
