--- a/src/app/pages/feeds/home/postdetail/postdetail.page.html
+++ b/src/app/pages/feeds/home/postdetail/postdetail.page.html
@@ -16,30 +16,30 @@
   </ion-refresher>
 
   <div class="container">
-
-    <!-- POST -->
-    <ion-grid class="post-grid" [class.darkPostGrid]="theme.darkMode" [class.blur]="menuService.optionsOn">
-      <ion-row class="post-row">
-        <ion-col class="img-col" size="2.5">
+    <ion-grid class="postDetail-grid" [class.dark-postDetail-grid]="theme.darkMode" [class.blur]="menuService.optionsOn">
+      <ion-row class="top-row">
+        <ion-col class="left-col" size="2.25">
           <div class="feedAvatar" [class.dark-feedAvatar]="theme.darkMode">
             <img src={{channelAvatar}}>
             <div class="offline" [class.online]="nodeStatus[nodeId] === 0"></div>
           </div>
         </ion-col>
-        <ion-col class="content-col" size="9.5">
-          <ion-row class="top-row">
-            <ion-col class="left-col" size="11" (press)="pressName()">
-              <ion-label>
-                {{ channelName }}
-                <span>- {{ handleDisplayTime(postTS) }}</span>
-              </ion-label>
-            </ion-col>
-            <img 
-              [src]="!theme.darkMode ? './assets/images/dots-three-vertical.svg' : './assets/images/dots-three-vertical-dark.svg'"
-              (click)="menuMore()"
-            >
-          </ion-row>
+        <ion-col class="mid-col" size="8" (press)="pressName()">
+          <ion-label>
+            {{ channelName }}
+            <span>- {{ handleDisplayTime(postTS) }}</span>
+          </ion-label>
           <p>@{{ channelOwner }}</p>
+        </ion-col>
+        <ion-col class="right-col" size="1.5">
+          <img 
+            [src]="!theme.darkMode ? './assets/images/dots-three-vertical.svg' : './assets/images/dots-three-vertical-dark.svg'"
+            (click)="menuMore()"
+          >
+        </ion-col>
+      </ion-row>
+      <ion-row class="mid-row">
+        <ion-col>
           <h2 (click)="!menuService.optionsOn ? null : menuService.hideOptions()">
             <pre>{{ getContentText(postContent) }}</pre>
           </h2>
@@ -49,23 +49,22 @@
             class="post-img"
             (click)="!menuService.optionsOn ? null : menuService.hideOptions()"
           > 
-          <ion-row class="bottom-row">
-            <ion-col size="2.25" (click)="like()">
-              <img [src]="checkMyLike() ? '/assets/images/like-s.svg' : '/assets/images/like.svg'">
-              <ion-label [class.liked]="checkMyLike()">{{ likesNum }}</ion-label>
-            </ion-col>
-            <ion-col (click)="showCommentPage(nodeId,channelId,postId)">
-              <img src="/assets/images/bubble-line.svg">
-              <ion-label>{{ commentsNum }}</ion-label>
-            <!--   <img [src]="commentsNum ? '/assets/images/comment-s.svg' : '/assets/images/bubble-line.svg'">
-              <ion-label [class.commented]="commentsNum">{{ commentsNum }}</ion-label> -->
-            </ion-col>
-          </ion-row>
+        </ion-col>
+      </ion-row>
+      <ion-row class="bottom-row">
+        <ion-col size="1.75" (click)="like()">
+          <img [src]="checkMyLike() ? '/assets/images/like-s.svg' : '/assets/images/like.svg'">
+          <ion-label [class.liked]="checkMyLike()">{{ likesNum }}</ion-label>
+        </ion-col>
+        <ion-col (click)="showCommentPage(nodeId,channelId,postId)">
+          <img src="/assets/images/bubble-line.svg">
+          <ion-label>{{ commentsNum }}</ion-label>
+<!--           <img [src]="commentsNum ? '/assets/images/comment-s.svg' : '/assets/images/bubble-line.svg'">
+          <ion-label [class.commented]="commentsNum">{{ commentsNum }}</ion-label> -->
         </ion-col>
       </ion-row>
     </ion-grid>
 
-    <!-- COMMENTS -->
     <ion-grid *ngFor="let comment of commentList let i=index" class="post-grid comment-grid" [class.darkPostGrid]="theme.darkMode" [class.blur]="menuService.optionsOn">
       <ion-row class="post-row">
         <ion-col class="img-col" size="2.5">
@@ -92,85 +91,39 @@
         </ion-col>
       </ion-row>
     </ion-grid>
-  </div>
 
-  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
-    <ion-infinite-scroll-content
-      loadingSpinner="bubbles"
-      loadingText="{{'common.loadingText'|translate}}">
-    </ion-infinite-scroll-content>
-  </ion-infinite-scroll>
-
-  <!-- OPTIONS POPUP -->
-  <ion-row class="global-options" [class.global-darkOptions]="theme.darkMode" *ngIf="menuService.optionsOn">
-    <div class="close ion-activatable ripple" (click)="menuService.hideOptions()">
-      <img *ngIf="!theme.darkMode" src="/assets/icons/cross.svg">
-      <img *ngIf="theme.darkMode" src="/assets/icons/darkmode/cross.svg">
-      <ion-ripple-effect></ion-ripple-effect>
-    </div>
-    <ion-col size="4.5" class="left-col" (click)="menuService.shareChannel()">
-      <div class="option">
-        <ion-icon mode="ios" name="share"></ion-icon>
-        <span>Share</span> 
+    <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+      <ion-infinite-scroll-content
+        loadingSpinner="bubbles"
+        loadingText="{{'common.loadingText'|translate}}">
+      </ion-infinite-scroll-content>
+    </ion-infinite-scroll>
+  
+    <ion-row class="global-options" [class.global-darkOptions]="theme.darkMode" *ngIf="menuService.optionsOn">
+      <div class="close ion-activatable ripple" (click)="menuService.hideOptions()">
+        <img *ngIf="!theme.darkMode" src="/assets/icons/cross.svg">
+        <img *ngIf="theme.darkMode" src="/assets/icons/darkmode/cross.svg">
+        <ion-ripple-effect></ion-ripple-effect>
       </div>
-    </ion-col>
-    <ion-col size="3" class="middle-col">
-      <div class="divider"></div>
-    </ion-col>
-    <ion-col size="4.5" class="right-col" (click)="menuService.deleteChannel()">
-      <div class="option">
-        <ion-icon mode="ios" name="trash"></ion-icon>
-        <span>Unfollow</span>
-      </div>
-    </ion-col>
-  </ion-row>
-
-</ion-content>
-
-<!-- START NEW POST DETAIL HEADER -->
-<!-- <div class="container">
-  <ion-grid class="postDetail-grid" [class.darkPostGrid]="theme.darkMode">
-    <ion-row class="top-row">
-      <ion-col class="left-col" size="2.5">
-        <div class="feedAvatar" [class.dark-feedAvatar]="theme.darkMode">
-          <img src="/assets/images/default-contact.svg">
-          <div class="offline"></div>
+      <ion-col size="4.5" class="left-col" (click)="menuService.shareChannel()">
+        <div class="option">
+          <ion-icon mode="ios" name="share"></ion-icon>
+          <span>Share</span> 
         </div>
       </ion-col>
-      <ion-col class="mid-col" size="8" (press)="pressName()">
-        <ion-label>
-          Bird Feeds
-          <span>- Yesterday</span>
-        </ion-label>
-        <p>@BenjaminPiette</p>
+      <ion-col size="3" class="middle-col">
+        <div class="divider"></div>
       </ion-col>
-      <ion-col class="right-col" size="1.5">
-        <img 
-          [src]="!theme.darkMode ? './assets/images/dots-three-vertical.svg' : './assets/images/dots-three-vertical-dark.svg'"
-        >
+      <ion-col size="4.5" class="right-col" (click)="menuService.deleteChannel()">
+        <div class="option">
+          <ion-icon mode="ios" name="trash"></ion-icon>
+          <span>Unfollow</span>
+        </div>
       </ion-col>
     </ion-row>
-    <ion-row class="mid-row">
-      <ion-col>
-        <h2>
-          <pre>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic odio quidem eum culpa officia amet alias consectetur ab, magni sapiente consequuntur fugit cupiditate doloribus repellendus.</pre>
-        </h2>
-      </ion-col>
-    </ion-row>
-    <ion-row class="bottom-row">
-      <ion-col size="2.25">
-        <img src='/assets/images/like.svg'>
-        <ion-label>12</ion-label>
-      </ion-col>
-      <ion-col>
-        <img src="/assets/images/bubble-line.svg">
-        <ion-label>4</ion-label>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-</div> -->
+  </div> 
 
-
+</ion-content>
    <!--  <div class="image-text-layout-div" >
       <ion-card-content class="ion-no-padding ion-no-margin">
           <div class="menu-div"  (click)="menuMore()">
