--- a/src/app/components/postfrom/postfrom.component.html
+++ b/src/app/components/postfrom/postfrom.component.html
@@ -35,6 +35,7 @@
       </ion-row>
     </ion-item>
   </ion-list>
+  <div class="arrow-down"></div>
 </ion-grid>
 
 <!-- <div [class.darkContainer]="theme.darkMode">
