--- a/src/global.scss
+++ b/src/global.scss
@@ -156,134 +156,59 @@ ion-input {
   width: 100%;
 }
 
-ion-header {
-  ion-toolbar {
-    margin-top: 20px;
+/****************** Postfrom Component ******************/
+.PostfromComponent {
+  --background: #ffffff;
+  --box-shadow: 0px 25px 35px 0  #5c5e7c;
 
-    .header-btns {
-      font-size: 25px;
-    }
-
-    ion-title {
-      font-size: 23px;
-      font-weight: bold;
-    }
-  }
-
-  ion-segment {
-    margin-top: 10px;
-    color: #959595;
-    border: 0px;
-    border-radius: 0px;
-
-    .segment-button-checked{
-      background: #FFF;
-      color: #007AFF !important;
-      border-bottom: 1px solid #007AFF;
-    }
-
-    ion-segment-button {
-
-      ion-label {
-        margin: 0;
-        color: #959595;
-      }
+  .popover-wrapper{
+    .popover-content {
+      width: 85vw !important;
+      position: fixed;
+      bottom: 9%; // this is based on ion-tab-bar height which is 9%
+      overflow: visible;
+      border-radius: 25px;
     }
   }
 }
 
-ion-list {
-  background: #FAFAFA;
-  min-height: 100%;
-  padding: 0;
+.dark-PostfromComponent {
+  --background: #2e2f4e;
+  --box-shadow: 0px 25px 35px 0 #11132b;
 
-  .search-container {
-    position: sticky;
-    top: 0px;
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    background: #FAFAFA;
-    padding: 12px 0 0;
-
-    ion-searchbar {
-      width: 80%;
-      padding: 0;
-      margin: 0;
+  .popover-wrapper{
+    .popover-content {
+      width: 85vw !important;
+      position: fixed;
+      bottom: 9%; // this is based on ion-tab-bar height which is 9%
+      overflow: visible;
+      border-radius: 25px;
     }
   }
+}
 
-  .section {
-    display: flex;
-    justify-content: center;
+/****************** donate Component ******************/
+.donatePopup {
+  animation: animate;
+  animation-duration: 300ms;
+  animation-fill-mode: forwards;
 
-    p {
-      width: 85%;
-      margin: 12px 0;
-      font-weight: bold !important;
-      font-size: 18px !important;
-      color: black;
-    }
+  @keyframes animate {
+    0% { bottom: -1000px }
+    100% { bottom: 0px }
   }
 
-  ion-virtual-scroll {
-    display: inline;
+  ion-backdrop {
+    background: transparent !important;
+  }
 
-    ion-item {
-      --inner-padding-end: 0px;
-      --padding-start: 0px;
-
-      ion-row {
-        padding: 5px 0;
-
-        .img-container {
-          display: flex;
-          justify-content: flex-end;
-
-          ion-thumbnail {
-            border-radius: 15px !important;
-            border: solid 1px black;
-
-            ion-img {
-              border-radius: 15px;
-            }
-          }
-        }
-
-        .node-content {
-          display: flex;
-          align-items: center;
-
-            h2 {
-              font-size: 16px;
-              font-family: 'Raleway:500', sans-serif;
-              font-weight: normal;
-              margin: 0;
-            }
-
-            p {
-              font-size: 10px !important;
-              color: #959595;
-              margin: 0;
-            }
-        }
-
-        .btn-container {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-
-          ion-button {
-            --border-radius: 30px;
-            --box-shadow: none;
-
-            ion-label {
-              font-size: 9px;
-              padding: 0 5px;
-            }
-          }
-        }
-      }
+  .popover-wrapper{
+    .popover-content {
+      position: relative !important;
+      margin: 0 auto !important;
+      left: auto !important;
+      top: auto !important;
+      width: 85vw !important;
     }
   }
 }
@@ -333,52 +258,3 @@ pre {
   color:#000000;
 }
 
-/****************** Postfrom Component ******************/
-.PostfromComponent {
-  --background: #ffffff;
-  // --box-shadow: 0px 25px 35px 0 #5c5e7c;
-
-  .popover-wrapper{
-    .popover-content {
-      width: 85vw !important;
-    }
-  }
-}
-
-.dark-PostfromComponent {
-  --background: #2e2f4e;
-  --ion-backdrop-color:#000000;
-  // --box-shadow: 0px 25px 35px 0 #11132b;
-
-  .popover-wrapper{
-    .popover-content {
-      width: 85vw !important;
-    }
-  }
-}
-
-/****************** donate Component ******************/
-.donatePopup {
-  animation: animate;
-  animation-duration: 300ms;
-  animation-fill-mode: forwards;
-
-  @keyframes animate {
-    0% { bottom: -1000px }
-    100% { bottom: 0px }
-  }
-
-  ion-backdrop {
-    background: transparent !important;
-  }
-
-  .popover-wrapper{
-    .popover-content {
-      position: relative !important;
-      margin: 0 auto !important;
-      left: auto !important;
-      top: auto !important;
-      width: 85vw !important;
-    }
-  }
-}
